Fix alignment bug in header

--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@ header {
 header > div.container {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   margin: 0;
